--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-move": "^6.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
